crates/macros/tests/ui/crud_table_row_duplicate_key.stderr
error: CrudTableRow 列 key `id` 重复
 --> tests/ui/crud_table_row_duplicate_key.rs:7:27
  |
7 |     #[nexora(column(key = "id"))]
  |                           ^^^^
